objects/SOP__c.object
<CustomObject>
    <description>Used by internal Salesforce Team to document Standard Operating Procedures</description>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domain_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Document__c</fullName>
        <inlineHelpText>Add link to process documentation (LucidChart)</inlineHelpText>
        <label>Process Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Process_Summary__c</fullName>
        <label>Process Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sign_Off__c</fullName>
        <label>Sign Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Documentation__c</fullName>
        <label>Technical Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Validation Rule</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Best Practice</fullName>
                </value>
                <value>
                    <fullName>Business Procedure</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SOP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SOP-{00000}</displayFormat>
        <label>SOP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>